Add output to gitignore

--- a/notebooks/arbitrageDexCex.ipynb
+++ b/notebooks/arbitrageDexCex.ipynb
@@ -118,211 +118,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9c0a31fb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bids</th>\n",
+       "      <th>asks</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10963965124</th>\n",
+       "      <td>[['3809.87000000', '15.51040000'], ['3809.8100...</td>\n",
+       "      <td>[['3809.88000000', '8.71200000'], ['3810.07000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10963965361</th>\n",
+       "      <td>[['3810.06000000', '20.62370000'], ['3810.0000...</td>\n",
+       "      <td>[['3810.07000000', '12.90080000'], ['3810.1300...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10963965448</th>\n",
+       "      <td>[['3810.06000000', '11.33270000'], ['3810.0000...</td>\n",
+       "      <td>[['3810.07000000', '14.71520000'], ['3810.1300...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10963965471</th>\n",
+       "      <td>[['3810.06000000', '11.63080000'], ['3810.0000...</td>\n",
+       "      <td>[['3810.07000000', '14.71520000'], ['3810.1300...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10963965566</th>\n",
+       "      <td>[['3810.06000000', '20.92580000'], ['3810.0100...</td>\n",
+       "      <td>[['3810.07000000', '4.26200000'], ['3810.13000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10964008850</th>\n",
+       "      <td>[['3809.97000000', '10.90080000'], ['3809.9000...</td>\n",
+       "      <td>[['3809.98000000', '11.65910000'], ['3809.9900...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10964009296</th>\n",
+       "      <td>[['3809.98000000', '13.89120000'], ['3809.9000...</td>\n",
+       "      <td>[['3809.99000000', '15.28460000'], ['3810.0000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10964009462</th>\n",
+       "      <td>[['3809.98000000', '18.36810000'], ['3809.9600...</td>\n",
+       "      <td>[['3809.99000000', '13.69720000'], ['3810.0000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10964009503</th>\n",
+       "      <td>[['3809.98000000', '17.85840000'], ['3809.9000...</td>\n",
+       "      <td>[['3809.99000000', '14.27010000'], ['3810.0000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10964009870</th>\n",
+       "      <td>[['3809.70000000', '0.73550000'], ['3809.69000...</td>\n",
+       "      <td>[['3809.71000000', '22.50500000'], ['3809.7900...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>188 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                          bids  \\\n",
+       "time                                                             \n",
+       "10963965124  [['3809.87000000', '15.51040000'], ['3809.8100...   \n",
+       "10963965361  [['3810.06000000', '20.62370000'], ['3810.0000...   \n",
+       "10963965448  [['3810.06000000', '11.33270000'], ['3810.0000...   \n",
+       "10963965471  [['3810.06000000', '11.63080000'], ['3810.0000...   \n",
+       "10963965566  [['3810.06000000', '20.92580000'], ['3810.0100...   \n",
+       "...                                                        ...   \n",
+       "10964008850  [['3809.97000000', '10.90080000'], ['3809.9000...   \n",
+       "10964009296  [['3809.98000000', '13.89120000'], ['3809.9000...   \n",
+       "10964009462  [['3809.98000000', '18.36810000'], ['3809.9600...   \n",
+       "10964009503  [['3809.98000000', '17.85840000'], ['3809.9000...   \n",
+       "10964009870  [['3809.70000000', '0.73550000'], ['3809.69000...   \n",
+       "\n",
+       "                                                          asks  \n",
+       "time                                                            \n",
+       "10963965124  [['3809.88000000', '8.71200000'], ['3810.07000...  \n",
+       "10963965361  [['3810.07000000', '12.90080000'], ['3810.1300...  \n",
+       "10963965448  [['3810.07000000', '14.71520000'], ['3810.1300...  \n",
+       "10963965471  [['3810.07000000', '14.71520000'], ['3810.1300...  \n",
+       "10963965566  [['3810.07000000', '4.26200000'], ['3810.13000...  \n",
+       "...                                                        ...  \n",
+       "10964008850  [['3809.98000000', '11.65910000'], ['3809.9900...  \n",
+       "10964009296  [['3809.99000000', '15.28460000'], ['3810.0000...  \n",
+       "10964009462  [['3809.99000000', '13.69720000'], ['3810.0000...  \n",
+       "10964009503  [['3809.99000000', '14.27010000'], ['3810.0000...  \n",
+       "10964009870  [['3809.71000000', '22.50500000'], ['3809.7900...  \n",
+       "\n",
+       "[188 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# Load the CSV\n",
-    "df = pd.read_csv(\"/home/tobias/personal-dex-trading/src/binance/order_book.csv\", index_col=\"time\")\n",
-    "print(df.head())  # Display the first few rows\n",
-    "print(df.columns)  # Check the column names\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cfc6b041",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import ast  # To convert strings back into lists\n",
-    "\n",
-    "# Expand top bid and ask into separate columns with prices and quantities\n",
-    "def parse_order(order_list_str):\n",
-    "    try:\n",
-    "        # Convert the string to a list (e.g., '[[\"3789.95000000\", \"0.00280000\"]]' -> [['3789.95000000', '0.00280000']])\n",
-    "        orders = ast.literal_eval(order_list_str)\n",
-    "        if len(orders) > 0:\n",
-    "            # Return the first price and quantity (top of the order book)\n",
-    "            return float(orders[0][0]), float(orders[0][1])\n",
-    "        else:\n",
-    "            return None, None\n",
-    "    except (ValueError, SyntaxError):\n",
-    "        return None, None\n",
-    "\n",
-    "# Apply parsing to extract the top bid and ask\n",
-    "df[['bid_price', 'bid_quantity']] = df['bids'].apply(parse_order).apply(pd.Series)\n",
-    "df[['ask_price', 'ask_quantity']] = df['asks'].apply(parse_order).apply(pd.Series)\n",
-    "\n",
-    "# Drop nested lists columns if no longer needed\n",
-    "df = df.drop(columns=['bids', 'asks'])\n",
-    "\n",
-    "# Preview the result\n",
-    "print(df.head())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2dd1942b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1df8ffd3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60646e2e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.binance.order_book import BinanceClient\n",
-    "binance_client = BinanceClient()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a9fdaab2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"wss://stream.binance.com:9443/ws/ethusdc@depth10@1000ms\" # 10 depth, 1 sec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2a03b3d9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time\n",
-    "import datetime\n",
-    "from binance import ThreadedWebsocketManager\n",
-    "from src.config import BINANCE_API_KEY, BINANCE_API_SECRET\n",
-    "\n",
-    "def handle_book_ticker(msg):\n",
-    "    ts = datetime.datetime.now()\n",
-    "    print(f\"[{ts}] Symbol: {msg['s']}, Bid: {msg['b']}, Ask: {msg['a']}\")\n",
-    "    # Du kannst hier auch in eine CSV oder Datenbank loggen, z. B.:\n",
-    "    # df = pd.DataFrame([{\n",
-    "    #     'timestamp': ts,\n",
-    "    #     'symbol': msg['s'],\n",
-    "    #     'bid_price': float(msg['b']),\n",
-    "    #     'ask_price': float(msg['a']),\n",
-    "    # }])\n",
-    "    # df.to_csv('ethusdc_quotes.csv', mode='a', header=False, index=False)\n",
-    "\n",
-    "# Starte den WebSocket Manager\n",
-    "twm = ThreadedWebsocketManager(api_key=BINANCE_API_KEY, api_secret=BINANCE_API_SECRET)\n",
-    "twm.start()\n",
-    "\n",
-    "# Starte den BookTicker-Stream für ETHUSDC\n",
-    "twm.start_book_ticker_socket(callback=handle_book_ticker, symbol=\"ethusdc\")\n",
-    "\n",
-    "# WebSocket läuft im Hintergrund → optional hier idle halten\n",
-    "import time\n",
-    "try:\n",
-    "    while True:\n",
-    "        time.sleep(1)\n",
-    "except KeyboardInterrupt:\n",
-    "    print(\"Stopping stream...\")\n",
-    "    twm.stop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e16c24c1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exchange_info = binance_client.client.get_exchange_info()\n",
-    "symbols = exchange_info['symbols']\n",
-    "symbols_with_trading_status = [\n",
-    "    item['symbol'] for item in exchange_info['symbols'] if item['status'] == 'TRADING'\n",
-    "]\n",
-    "symbols_with_trading_status\n",
-    "#symbols"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d5a8acc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import time\n",
-    "\n",
-    "token_0 = 'ETH'\n",
-    "token_1 = 'USDC'\n",
-    "\n",
-    "columns = ['timestamp', 'symbol', 'type', 'price', 'quantity']\n",
-    "df = pd.DataFrame(columns=columns)\n",
-    "\n",
-    "try:\n",
-    "    while True:\n",
-    "        for symbol in symbols_with_trading_status:\n",
-    "            bids, asks = binance_client.get_order_book(symbol, limit=10)\n",
-    "            timestamp = pd.Timestamp.now()\n",
-    "            bid_data = pd.DataFrame(\n",
-    "                [[timestamp, symbol, 'bid', float(bid[0]), float(bid[1])] for bid in bids],\n",
-    "                columns=columns\n",
-    "            )\n",
-    "            ask_data = pd.DataFrame(\n",
-    "                [[timestamp, symbol, 'ask', float(ask[0]), float(ask[1])] for ask in asks],\n",
-    "                columns=columns\n",
-    "            )\n",
-    "            df = pd.concat([df, bid_data, ask_data], ignore_index=True)\n",
-    "        time.sleep(0.75)\n",
-    "except KeyboardInterrupt:\n",
-    "    print(\"Data collection stopped.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5bdb088e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.timestamp.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bfda6c18",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[df.symbol==\"ETHBTC\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6be296dc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import display, HTML\n",
-    "\n",
-    "display(HTML(df.to_html(notebook=True, max_rows=None, max_cols=None)))"
+    "df = pd.read_csv(\"/home/tobias/personal-dex-trading/out/data/order_book.csv\", index_col=\"time\")\n",
+    "df"
    ]
   },
   {
