Add unichain stream + analysis notebook

--- a/notebooks/arbitrageDexCex.ipynb
+++ b/notebooks/arbitrageDexCex.ipynb
@@ -113,12 +113,12 @@
    "id": "31b60895",
    "metadata": {},
    "source": [
-    "# Binance API"
+    "# Analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "id": "9c0a31fb",
    "metadata": {},
    "outputs": [
@@ -154,29 +154,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>10963965124</th>\n",
-       "      <td>[['3809.87000000', '15.51040000'], ['3809.8100...</td>\n",
-       "      <td>[['3809.88000000', '8.71200000'], ['3810.07000...</td>\n",
+       "      <th>2025-07-29 15:05:40.000000</th>\n",
+       "      <td>[['3854.75000000', '31.90520000'], ['3854.7000...</td>\n",
+       "      <td>[['3854.76000000', '0.00200000'], ['3854.77000...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10963965361</th>\n",
-       "      <td>[['3810.06000000', '20.62370000'], ['3810.0000...</td>\n",
-       "      <td>[['3810.07000000', '12.90080000'], ['3810.1300...</td>\n",
+       "      <th>2025-07-29 15:05:41.000000</th>\n",
+       "      <td>[['3854.96000000', '35.81790000'], ['3854.9100...</td>\n",
+       "      <td>[['3854.97000000', '0.00200000'], ['3855.09000...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10963965448</th>\n",
-       "      <td>[['3810.06000000', '11.33270000'], ['3810.0000...</td>\n",
-       "      <td>[['3810.07000000', '14.71520000'], ['3810.1300...</td>\n",
+       "      <th>2025-07-29 15:05:42.000000</th>\n",
+       "      <td>[['3855.08000000', '36.43730000'], ['3855.0000...</td>\n",
+       "      <td>[['3855.09000000', '0.00140000'], ['3855.10000...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10963965471</th>\n",
-       "      <td>[['3810.06000000', '11.63080000'], ['3810.0000...</td>\n",
-       "      <td>[['3810.07000000', '14.71520000'], ['3810.1300...</td>\n",
+       "      <th>2025-07-29 15:05:43.000000</th>\n",
+       "      <td>[['3855.08000000', '17.09890000'], ['3855.0600...</td>\n",
+       "      <td>[['3855.09000000', '12.07730000'], ['3855.1000...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10963965566</th>\n",
-       "      <td>[['3810.06000000', '20.92580000'], ['3810.0100...</td>\n",
-       "      <td>[['3810.07000000', '4.26200000'], ['3810.13000...</td>\n",
+       "      <th>2025-07-29 15:05:44.000000</th>\n",
+       "      <td>[['3855.08000000', '13.31860000'], ['3855.0100...</td>\n",
+       "      <td>[['3855.09000000', '9.84890000'], ['3855.10000...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -184,83 +184,235 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10964008850</th>\n",
-       "      <td>[['3809.97000000', '10.90080000'], ['3809.9000...</td>\n",
-       "      <td>[['3809.98000000', '11.65910000'], ['3809.9900...</td>\n",
+       "      <th>2025-07-29 15:08:13.000000</th>\n",
+       "      <td>[['3844.07000000', '10.68110000'], ['3844.0200...</td>\n",
+       "      <td>[['3844.08000000', '7.55070000'], ['3844.09000...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10964009296</th>\n",
-       "      <td>[['3809.98000000', '13.89120000'], ['3809.9000...</td>\n",
-       "      <td>[['3809.99000000', '15.28460000'], ['3810.0000...</td>\n",
+       "      <th>2025-07-29 15:08:14.000000</th>\n",
+       "      <td>[['3844.07000000', '7.52210000'], ['3844.02000...</td>\n",
+       "      <td>[['3844.08000000', '10.80750000'], ['3844.0900...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10964009462</th>\n",
-       "      <td>[['3809.98000000', '18.36810000'], ['3809.9600...</td>\n",
-       "      <td>[['3809.99000000', '13.69720000'], ['3810.0000...</td>\n",
+       "      <th>2025-07-29 15:08:15.000000</th>\n",
+       "      <td>[['3844.07000000', '8.08770000'], ['3844.02000...</td>\n",
+       "      <td>[['3844.08000000', '7.15840000'], ['3844.09000...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10964009503</th>\n",
-       "      <td>[['3809.98000000', '17.85840000'], ['3809.9000...</td>\n",
-       "      <td>[['3809.99000000', '14.27010000'], ['3810.0000...</td>\n",
+       "      <th>2025-07-29 15:08:16.000000</th>\n",
+       "      <td>[['3844.25000000', '22.75250000'], ['3844.2200...</td>\n",
+       "      <td>[['3844.26000000', '4.26640000'], ['3844.27000...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10964009870</th>\n",
-       "      <td>[['3809.70000000', '0.73550000'], ['3809.69000...</td>\n",
-       "      <td>[['3809.71000000', '22.50500000'], ['3809.7900...</td>\n",
+       "      <th>2025-07-29 15:08:17.000000</th>\n",
+       "      <td>[['3844.38000000', '4.85730000'], ['3844.33000...</td>\n",
+       "      <td>[['3844.39000000', '9.68260000'], ['3844.40000...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>188 rows × 2 columns</p>\n",
+       "<p>153 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                          bids  \\\n",
-       "time                                                             \n",
-       "10963965124  [['3809.87000000', '15.51040000'], ['3809.8100...   \n",
-       "10963965361  [['3810.06000000', '20.62370000'], ['3810.0000...   \n",
-       "10963965448  [['3810.06000000', '11.33270000'], ['3810.0000...   \n",
-       "10963965471  [['3810.06000000', '11.63080000'], ['3810.0000...   \n",
-       "10963965566  [['3810.06000000', '20.92580000'], ['3810.0100...   \n",
-       "...                                                        ...   \n",
-       "10964008850  [['3809.97000000', '10.90080000'], ['3809.9000...   \n",
-       "10964009296  [['3809.98000000', '13.89120000'], ['3809.9000...   \n",
-       "10964009462  [['3809.98000000', '18.36810000'], ['3809.9600...   \n",
-       "10964009503  [['3809.98000000', '17.85840000'], ['3809.9000...   \n",
-       "10964009870  [['3809.70000000', '0.73550000'], ['3809.69000...   \n",
+       "                                                                         bids  \\\n",
+       "time                                                                            \n",
+       "2025-07-29 15:05:40.000000  [['3854.75000000', '31.90520000'], ['3854.7000...   \n",
+       "2025-07-29 15:05:41.000000  [['3854.96000000', '35.81790000'], ['3854.9100...   \n",
+       "2025-07-29 15:05:42.000000  [['3855.08000000', '36.43730000'], ['3855.0000...   \n",
+       "2025-07-29 15:05:43.000000  [['3855.08000000', '17.09890000'], ['3855.0600...   \n",
+       "2025-07-29 15:05:44.000000  [['3855.08000000', '13.31860000'], ['3855.0100...   \n",
+       "...                                                                       ...   \n",
+       "2025-07-29 15:08:13.000000  [['3844.07000000', '10.68110000'], ['3844.0200...   \n",
+       "2025-07-29 15:08:14.000000  [['3844.07000000', '7.52210000'], ['3844.02000...   \n",
+       "2025-07-29 15:08:15.000000  [['3844.07000000', '8.08770000'], ['3844.02000...   \n",
+       "2025-07-29 15:08:16.000000  [['3844.25000000', '22.75250000'], ['3844.2200...   \n",
+       "2025-07-29 15:08:17.000000  [['3844.38000000', '4.85730000'], ['3844.33000...   \n",
        "\n",
-       "                                                          asks  \n",
-       "time                                                            \n",
-       "10963965124  [['3809.88000000', '8.71200000'], ['3810.07000...  \n",
-       "10963965361  [['3810.07000000', '12.90080000'], ['3810.1300...  \n",
-       "10963965448  [['3810.07000000', '14.71520000'], ['3810.1300...  \n",
-       "10963965471  [['3810.07000000', '14.71520000'], ['3810.1300...  \n",
-       "10963965566  [['3810.07000000', '4.26200000'], ['3810.13000...  \n",
-       "...                                                        ...  \n",
-       "10964008850  [['3809.98000000', '11.65910000'], ['3809.9900...  \n",
-       "10964009296  [['3809.99000000', '15.28460000'], ['3810.0000...  \n",
-       "10964009462  [['3809.99000000', '13.69720000'], ['3810.0000...  \n",
-       "10964009503  [['3809.99000000', '14.27010000'], ['3810.0000...  \n",
-       "10964009870  [['3809.71000000', '22.50500000'], ['3809.7900...  \n",
+       "                                                                         asks  \n",
+       "time                                                                           \n",
+       "2025-07-29 15:05:40.000000  [['3854.76000000', '0.00200000'], ['3854.77000...  \n",
+       "2025-07-29 15:05:41.000000  [['3854.97000000', '0.00200000'], ['3855.09000...  \n",
+       "2025-07-29 15:05:42.000000  [['3855.09000000', '0.00140000'], ['3855.10000...  \n",
+       "2025-07-29 15:05:43.000000  [['3855.09000000', '12.07730000'], ['3855.1000...  \n",
+       "2025-07-29 15:05:44.000000  [['3855.09000000', '9.84890000'], ['3855.10000...  \n",
+       "...                                                                       ...  \n",
+       "2025-07-29 15:08:13.000000  [['3844.08000000', '7.55070000'], ['3844.09000...  \n",
+       "2025-07-29 15:08:14.000000  [['3844.08000000', '10.80750000'], ['3844.0900...  \n",
+       "2025-07-29 15:08:15.000000  [['3844.08000000', '7.15840000'], ['3844.09000...  \n",
+       "2025-07-29 15:08:16.000000  [['3844.26000000', '4.26640000'], ['3844.27000...  \n",
+       "2025-07-29 15:08:17.000000  [['3844.39000000', '9.68260000'], ['3844.40000...  \n",
        "\n",
-       "[188 rows x 2 columns]"
+       "[153 rows x 2 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "from datetime import datetime, timezone\n",
     "\n",
     "# Load the CSV\n",
-    "df = pd.read_csv(\"/home/tobias/personal-dex-trading/out/data/order_book.csv\", index_col=\"time\")\n",
-    "df"
+    "df_binance = pd.read_csv(\"/home/tobias/personal-dex-trading/out/data/order_book.csv\", index_col=\"time\")\n",
+    "df_binance = df_binance[~df_binance.index.duplicated(keep='first')]\n",
+    "df_binance"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "b69fdc40",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "bda6b5e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>input_value</th>\n",
+       "      <th>output_value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>timestamp</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2025-07-29 15:05:41</th>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.383584</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-29 15:05:41</th>\n",
+       "      <td>0.0010</td>\n",
+       "      <td>3.834008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-29 15:05:41</th>\n",
+       "      <td>0.0100</td>\n",
+       "      <td>38.157222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-29 15:05:42</th>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.383584</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-29 15:05:42</th>\n",
+       "      <td>0.0010</td>\n",
+       "      <td>3.834008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-29 15:08:16</th>\n",
+       "      <td>0.0010</td>\n",
+       "      <td>3.833956</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-29 15:08:16</th>\n",
+       "      <td>0.0100</td>\n",
+       "      <td>38.156707</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-29 15:08:17</th>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.383579</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-29 15:08:17</th>\n",
+       "      <td>0.0010</td>\n",
+       "      <td>3.833956</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-29 15:08:17</th>\n",
+       "      <td>0.0100</td>\n",
+       "      <td>38.156707</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>387 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     input_value  output_value\n",
+       "timestamp                                     \n",
+       "2025-07-29 15:05:41       0.0001      0.383584\n",
+       "2025-07-29 15:05:41       0.0010      3.834008\n",
+       "2025-07-29 15:05:41       0.0100     38.157222\n",
+       "2025-07-29 15:05:42       0.0001      0.383584\n",
+       "2025-07-29 15:05:42       0.0010      3.834008\n",
+       "...                          ...           ...\n",
+       "2025-07-29 15:08:16       0.0010      3.833956\n",
+       "2025-07-29 15:08:16       0.0100     38.156707\n",
+       "2025-07-29 15:08:17       0.0001      0.383579\n",
+       "2025-07-29 15:08:17       0.0010      3.833956\n",
+       "2025-07-29 15:08:17       0.0100     38.156707\n",
+       "\n",
+       "[387 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# load csv\n",
+    "df_unichain = pd.read_csv(\"/home/tobias/personal-dex-trading/out/data/block_data.csv\", index_col=\"timestamp\")\n",
+    "df_unichain.index = pd.to_datetime(df_unichain.index, unit='s')\n",
+    "df_unichain.index += pd.Timedelta(hours=2) # match binance timezone\n",
+    "df_unichain"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3306687",
+   "metadata": {},
+   "source": [
+    "# Next"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ce89c3e",
+   "metadata": {},
+   "source": [
+    "## Binance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65a382c5",
    "metadata": {},
    "source": [
     "Next, use SBE Market data for lower latency: https://developers.binance.com/docs/binance-spot-api-docs/sbe-market-data-streams"
@@ -268,85 +420,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2af4a803",
+   "id": "22043d3a",
    "metadata": {},
    "source": [
-    "# Unichain"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8367716a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.uniswap.v2_client import UniswapV2Client\n",
-    "from src.config import UNICHAIN_WETH, UNICHAIN_USDC\n",
-    "\n",
-    "uniswap_client = UniswapV2Client()\n",
-    "\n",
-    "uniswap_client.get_amounts_out(UNICHAIN_WETH, UNICHAIN_USDC)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed89b540",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import sys\n",
-    "sys.path.append(os.path.abspath(\"..\")) # set working dir\n",
-    "\n",
-    "from src.utils.retrieveAbi import save_abi_to_file, load_abi\n",
-    "from src.config import (\n",
-    "    UNICHAIN_UNIVERSAL_ROUTER_V2_ADDRESS, CHAINID_UNICHAIN,\n",
-    "    UNICHAIN_UNISWAP_V2_ROUTER_02, UNICHAIN_WETH, UNICHAIN_USDC,\n",
-    "    ALCHEMY_UNICHAIN_BASE_RPC_URL)\n",
-    "\n",
-    "save_abi_to_file(UNICHAIN_UNIVERSAL_ROUTER_V2_ADDRESS, chain_id=CHAINID_UNICHAIN)\n",
-    "save_abi_to_file(UNICHAIN_UNISWAP_V2_ROUTER_02, chain_id=CHAINID_UNICHAIN)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cbe16a4f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "WETH_AMOUNT_IN = 0.01\n",
-    "USDC_AMOUNT_IN = 38\n",
-    "weth_wei_amount_in = w3.to_wei(WETH_AMOUNT_IN, \"ether\")\n",
-    "usdc_amounts_in = USDC_AMOUNT_IN * 10 ** 6 # USDC has 6 decimals\n",
-    "\n",
-    "router_address = Web3.to_checksum_address(UNICHAIN_UNISWAP_V2_ROUTER_02)\n",
-    "router_abi = load_abi(router_address, CHAINID_UNICHAIN)\n",
-    "router_contract = w3.eth.contract(address=router_address, abi=router_abi)\n",
-    "\n",
-    "alchemy_rpc_url = f\"{ALCHEMY_UNICHAIN_BASE_RPC_URL}{ALCHEMY_API_KEY}\"\n",
-    "w3 = Web3(Web3.HTTPProvider(alchemy_rpc_url))\n",
-    "print(w3.is_connected()) # check connection\n",
-    "latest_block = w3.eth.get_block(\"latest\")\n",
-    "print(latest_block.number) # latest block number"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49c154b1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "amounts_out = router_contract.functions.getAmountsOut(weth_wei_amount_in, [UNICHAIN_WETH, UNICHAIN_USDC]).call()\n",
-    "print(f\"Input Amount (WETH): {WETH_AMOUNT_IN} WETH\")\n",
-    "print(f\"Output Amount (USDC): {amounts_out[-1] / (10 ** 6)} USDC\")  # USDC has 6 decimals\n",
-    "print(f\"----\")\n",
-    "amounts_out_reverse = router_contract.functions.getAmountsOut(usdc_amounts_in, [UNICHAIN_USDC, UNICHAIN_WETH]).call()\n",
-    "print(f\"Input Amount (USDC): {USDC_AMOUNT_IN} USDC\")\n",
-    "print(f\"Output Amount (WETH): {w3.from_wei(amounts_out_reverse[-1], \"ether\")} WETH \")  # USDC has 6 decimals"
+    "## Unichain"
    ]
   },
   {
@@ -355,16 +432,8 @@
    "metadata": {},
    "source": [
     "Next, we can either do:\n",
-    "- arbitrage between Uniswap v2 and Binance \n"
+    "- arbitrage between Uniswap v4 and Binance \n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68a936e8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -373,20 +442,6 @@
    "source": [
     "- arbitrage between Uniswap v2 and v4 pools"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "afe9e598",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b31b6814",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
